# SmartHearingAid

./: settings.gradle.kts
androidTest/java/com/hearing/hearingtest/: ExampleInstrumentedTest.kt
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_rnnoise.cpp
app/src/main/java/com/hearing/hearingtest/: AudioEngine.kt  AudioEnhancer.kt  FileAudioPlayer.kt  LiveAudioEngine.kt  LiveAudioPrefs.kt  LiveDenoise.kt  MainActivity.kt  SavedTestsManager.kt  SimpleDsp.kt  SpectralSubtraction.kt  UploadedAudio.kt  UploadedFilesManager.kt  WavAudioPlayer.kt  WavUtils.kt
app/src/main/java/com/hearing/hearingtest/ui/theme/: Color.kt  Theme.kt  Type.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rnnoise/src/: nnet.h
test/java/com/hearing/hearingtest/: ExampleUnitTest.kt
